--- a/createAccount.html
+++ b/createAccount.html
@@ -176,7 +176,7 @@
 
       <button type="submit" class="btn">Sign Up</button>
       <div class="links">
-        Already have an account? <a href="login.html">Login here</a>
+        Already have an account? <a href="index.html">Login here</a>
       </div>
     </form>
   </div>
