--- a/forgetPass.html
+++ b/forgetPass.html
@@ -162,7 +162,7 @@
       </div>
       <button type="submit" class="btn">Send Reset Link</button>
       <div class="links">
-        <a href="login.html">Back to Login</a>
+        <a href="index.html">Back to Login</a>
       </div>
     </form>
   </div>
